NOTICK: Resolve "illegal reflective access" warnings when running tests on Java 11. (#345)