@@ -47,6 +47,17 @@ allprojects {
         // We need the tests to share this module cache to prevent the
         // Gradle Test-Kit from downloading its own copy of Kotlin etc.
         systemProperty 'test.gradle.user.home', project.gradle.gradleUserHomeDir
+
+        // Resolve warnings about "illegal reflective access" that
+        // are generated by Gradle's own Groovy library.
+        if (current().isJava9Compatible()) {
+            jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                    '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+                    '--illegal-access=warn'
+        }
     }
 
     tasks.withType(ValidateTaskProperties).configureEach {
